[seaking_server_1.0.0.1 2013-09-22 张春生]
1、新功能：初始化项目
2、新功能：新建dev分支
3、新功能：搭建框架

[seaking_server_1.0.0.1 2013-09-23 张春生]
1、新功能：新增认证功能
2、新功能：新增创建角色、获得角色功能
3、新功能：新增战斗功能
4、新功能：调整竞技场功能
5、新功能：调整赌场功能
6、新功能：调整武器装备功能
7、新功能：调整阵型功能
8、新功能：调整背包功能
9、新功能：调整角色功能
10、新功能：调整资源功能
11、新功能：调整商店功能
12、新功能：调整任务功能
13、新功能：处理启动参数

[seaking_server_1.0.0.1 2013-09-24 张春生]
1、新功能：增加聊天接口说明文档
2、新功能：增加进入场景、切换场景、获得场景玩家数据功能
3、新功能：增加更改阵型功能
4、新功能：调整角色、背包、任务功能
5、新功能：调整武器装备功能
6、新功能：调整获得伙伴功能
7、新功能：调整背包功能

[seaking_server_1.0.0.1 2013-09-25 张春生]
1、新功能：调整任务功能
2、新功能：新增更新场景功能
3、新功能：新增初始化技能功能
4、新功能：调整创建角色功能

[seaking_server_1.0.0.1 2013-09-26 张春生]
1、新功能：新增学习技能功能
2、新功能：新增升级技能功能
3、新功能：新增使用技能功能

[seaking_server_1.0.0.1 2013-09-27 张春生]
1、新功能：调整战斗逻辑，增加技能处理

[seaking_server_1.0.0.1 2013-10-07 张春生]
1、新功能：重构项目代码
2、新功能：增加技能处理
3、新功能：增加技能buff
4、重构：重构项目代码

[seaking_server_1.0.0.1 2013-10-08 张春生]
1、新功能：调整初始化背包程序
2、新功能：同步角色数据
3、新功能：调整http请求
4、新功能：增加GM命令

[seaking_server_1.0.0.1 2013-10-09 张春生]
1、新功能：增加伙伴装载装备、卸载装备、升级装备功能

[seaking_server_1.0.0.1 2013-10-10 张春生]
1、新功能：增加获得昵称功能

[seaking_server_1.0.0.1 2013-10-11 张春生]
1、新功能：增加删除角色功能
2、新功能：存储session到redis中
3、新功能：增加技能处理

[seaking_server_1.0.0.1 2013-10-12 张春生]
1、新功能：增加技能处理

[seaking_server_1.0.0.1 2013-10-12 张春生]
1、新功能：调整战斗结果
2、bug：调整创建和删除角色bug

[seaking_server_1.0.0.1 2013-10-14 张春生]
1、新功能：增加溅射伤害逻辑处理

[seaking_server_1.0.0.1 2013-10-15 张春生]
1、新功能：创建角色等级为1级
2、新功能：增加技能处理
3、新功能：更新武器装备信息

[seaking_server_1.0.0.1 2013-10-18 张春生]
1、新功能：更新背包代码

[seaking_server_1.0.0.1 2013-10-20 张春生]
1、新功能：释放数据库连接
2、新功能：调整进入副本代码
3、新功能：调整战斗代码
4、新功能：调整购买、卖出代码

[seaking_server_1.0.0.1 2013-10-22 张春生]
1、新功能：增加测试代码
2、新功能：重构代码

[seaking_server_1.0.0.1 2013-10-26 张春生]
1、新功能：增加升级提示

[seaking_server_1.0.0.1 2013-10-29 张春生]
1、新功能：增加消息系统

--备注分类
1、新功能：
2、Bug:
3、需求变更：
4、重构：
5、merge:

--格式：
[seaking_server_1.0.0.1 2013-09-22 张春生]
版本号 日期 提交人
版本号：产品名 版本类型 主版本 辅版本 新功能版本 缺陷版本