@@ -9,6 +9,10 @@ var messageDao = require('../dao/messageDao');
 
 var messageService = module.exports;
 
+messageService.addMessage = function(serverId, registerType, loginName, message, cb) {
+    messageDao.addMessage(serverId, registerType, loginName, message, cb);
+}
+
 messageService.getMessage = function(serverId, registerType, loginName, cb) {
     messageDao.getMessage(serverId, registerType, loginName, cb);
 }
@@ -19,6 +23,30 @@ messageService.pushMessage = function(serverId, registerType, loginName, message
 
 messageService.removeMessage = function(serverId, registerType, loginName, cb) {
     messageDao.removeMessage(serverId, registerType, loginName, cb);
+}
+
+messageService.addTipMessage = function(serverId, registerType, loginName, message, cb) {
+    messageDao.addTipMessage(serverId, registerType, loginName, message, cb);
+}
+
+messageService.getTipMessage = function(serverId, registerType, loginName, cb) {
+    messageDao.getTipMessage(serverId, registerType, loginName, cb);
+}
+
+messageService.removeTipMessage = function(serverId, registerType, loginName, cb) {
+    messageDao.removeTipMessage(serverId, registerType, loginName, cb);
+}
+
+messageService.addBattleReport = function(serverId, registerType, loginName, cb) {
+    messageDao.addBattleReport(serverId, registerType, loginName, cb);
+}
+
+messageService.getBattleReport = function(serverId, registerType, loginName, cb) {
+    messageDao.getBattleReport(serverId, registerType, loginName, cb);
+}
+
+messageService.removeBattleReport = function(serverId, registerType, loginName, cb) {
+    messageDao.removeBattleReport(serverId, registerType, loginName, cb);
 }
 
 messageService.publishMessage = function(message, cb) {
