@@ -122,8 +122,12 @@ module.exports = function (app) {
 
     app.get('/message/addMessage', authRequired, message.addMessage);
     app.get('/message/getMessage', authRequired, message.getMessage);
+    app.get('/message/removeMessage', authRequired, message.removeMessage);
+    app.get('/message/addTipMessage', authRequired, message.addTipMessage);
+    app.get('/message/getTipMessage', authRequired, message.getTipMessage);
+    app.get('/message/removeTipMessage', authRequired, message.removeTipMessage);
+    app.get('/message/addBattleReport', authRequired, message.addBattleReport);
     app.get('/message/getBattleReport', authRequired, message.getBattleReport);
     app.get('/message/removeBattleReport', authRequired, message.removeBattleReport);
-    app.get('/message/removeMessage', authRequired, message.removeMessage);
     app.get('/message/publishMessage', message.publishMessage);
 }
