@@ -98,6 +98,9 @@
 [seaking_server_1.0.0.1 2013-10-29 张春生]
 1、新功能：增加消息系统
 
+[seaking_server_1.0.0.1 2013-10-31 张春生]
+1、新功能：增加消息系统
+
 --备注分类
 1、新功能：
 2、Bug:
